test/semantics/programs/valid/integer-post-op.guav
# Test nteger post op ++

x = 2
print(x++)